--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,10 @@
 # Big data
 data/**/*
-!data/sample/**            
-!data/raw/.gitkeep         
+
+# exceptions
+!data/sample/**             # Keep sample data
+!data/raw/.gitkeep          # Keep the .gitkeep
+!data/raw/**/*.csv          # Keep only csv        
 
 # Spark artefacts 
 spark-warehouse/
